--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,3 @@
-<p>
-  about works!
-</p>
+<h1 class="animated fadeIn fast">Sobre Comic APP</h1>
+<hr>
+<p class="animated fadeIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi quam odio consectetur illum consequuntur. Nobis sed asperiores ipsam fugiat temporibus cum deserunt neque, error odio hic perferendis laboriosam sapiente nulla!</p>
