--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -2,13 +2,18 @@
 <hr>
 <div class="card-columns">
 
-	<div class="card" *ngFor="let heroe of heroes">
-    <img class="card-img-top" src="{{heroe.img}}" alt="Card image cap">
+	<div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i =index">
+    <img class="card-img-top" [src]="heroe.img" [alt]="heroe.img">
     <div class="card-body">
       <h5 class="card-title">{{heroe.nombre}}</h5>
       <p class="card-text">{{heroe.bio}}</p>
-      <p class="card-text"><small class="text-muted">{{heroe.casa}}</small></p>
+      <p class="card-text"><small class="text-muted">{{heroe.aparicion}}</small></p>
+
+      <!--
       <button type="button" class="btn btn-outline-primary btn-block"> Ver más...</button>
+  -->
+
+  <a [routerLink]="['/heroe',i]" class="btn btn-block btn-outline-primary">Ver más...</a>
     </div>
   </div>
 	
